--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,7 @@ layout: default
 						<span class="post__date"> on <a href="{{post.url | prepend: site.baseurl}}">
 							<time datetime="{{ page.date | date_to_xmlschema }}">{{page.date | date: '%b %d, %Y'}}</time></a>
 						</span>
-						<span class="article__author"> by <a href="{{site.baseurl}}/about/">{{ site.author.name }}</a></span>
+						<!-- <span class="article__author"> by <a href="{{site.baseurl}}/about/">{{ site.author.name }}</a></span> -->
 					</span>
 				</div>
 			</div>
@@ -44,7 +44,7 @@ layout: default
 					{{ content }}
 				</div>
 	
-				<div class="post__share">
+				<!-- <div class="post__share">
 					<ul class="share__list list-reset">
 						<li class="share__item">
 							<a class="share__link share__facebook"
@@ -67,9 +67,9 @@ layout: default
 								title="Share on Pinterest" rel="nofollow"><i class="ion ion-logo-pinterest"></i></a>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 
-				<div class="widget-recent">
+				<!-- <div class="widget-recent">
 					<h5 class="widget__title">Recommended for you</h5>
 					<div class="recent-box">
 						{% for post in site.posts offset:0 limit:3 %}
@@ -85,11 +85,11 @@ layout: default
 						</div>
 						{% endfor %}
 					</div>
-				</div>
+				</div> -->
 
 				<div class="widget-newsletter">
-					<h5 class="newsletter-title wow fadeInUp">Get Interesting News</h5>
-					<div class="newsletter-subtitle wow fadeInUp" data-wow-delay=".2s">Stay up to date! Get all the latest & gretest posts delivered straight to your inbox</div>
+					<h5 class="newsletter-title wow fadeInUp">Did you enjoy this post?</h5>
+					<div class="newsletter-subtitle wow fadeInUp" data-wow-delay=".2s">Feel free to sign up to the weekly newsletter. :-)</div>
 					<form class="newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}"
 						method="POST" id="membedded-subscribe-form" name="membedded-subscribe-form" target="_blank" novalidate>
 						<div class="newsletter-group">
