First post, modified font, etc

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -87,7 +87,7 @@ layout: default
 					</div>
 				</div> -->
 
-				<div class="widget-newsletter">
+				<!-- <div class="widget-newsletter">
 					<h5 class="newsletter-title wow fadeInUp">Did you enjoy this post?</h5>
 					<div class="newsletter-subtitle wow fadeInUp" data-wow-delay=".2s">Feel free to sign up to the weekly newsletter. :-)</div>
 					<form class="newsletter-form validate" action="{% if site.mailchimp %}//{{site.mailchimp}}{% else %}#{% endif %}"
@@ -101,7 +101,7 @@ layout: default
 						</div>
 					</form>
 				</div>
-	
+	 -->
 	
 				{% if site.disqus-identifier %} {% include disqus-comments.html %} {% endif %}
 	
