--- a/_sass/1-tools/_grid.scss
+++ b/_sass/1-tools/_grid.scss
@@ -1,5 +1,6 @@
 $columns: 12;
-$container-base-width: 790px;
+$container-base-width: 850px;
+// $container-base-width: 790px;
 $container-offset: $base-spacing-unit;
 
 $desktop: 992px;
