--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -2,14 +2,24 @@
 // Global Variables
 // *****************
 
+// Text alignment
+$text-alignment: justify;
+
+// Font
+$global-font: 'Tahoma';
+$quote-font-size: 18px;
+
+
 // Spaces
 $base-spacing-unit: 20px;
+$quote-spacing-unit: 40px;
+
 
 
 // *****************
 // Color Variables
 // *****************
-$brand-color: #d8534f;
+$brand-color: #c9401e;
 $dark: #212121;
 $gray: #7f7f7f;
 $light-gray: #eee;
@@ -35,15 +45,17 @@ $border-color: $light-gray;
 // *****************
 // Typography
 // *****************
-$base-font-size: 15px;
+$base-font-size: 16px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Merriweather', serif;
+$base-font-family: $global-font;
 $base-line-height: 26px;
 
 // Headings
-$heading-font-family: 'Fjalla One', Helvetica Neue, Helvetica, Arial, sans-serif;
+// $heading-font-family: 'Fjalla One', Helvetica Neue, Helvetica, Arial, sans-serif;
+$heading-font-family: $global-font;
+
 
 $font-size-h1:  36px;
 $font-size-h2:  28px;
@@ -53,3 +65,7 @@ $font-size-h5:  18px;
 $font-size-h6:  16px;
 
 $heading-line-height: 1.2;
+
+// Titles
+
+$title-font-family: $global-font;
