--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -41,7 +41,7 @@ h6 {
   font-family: $heading-font-family;
   line-height: initial;
   letter-spacing: 1px;
-  text-transform: uppercase;
+  // text-transform: uppercase;
 }
 
 h1 {
@@ -70,15 +70,20 @@ h6 {
 
 // Blockquote
 blockquote {
-  padding-left: $base-spacing-unit;
-  font-size: 24px;
-  line-height: 34px;
-  border-left: 3px solid $brand-color;
+  // margin-left: 60px;
+  // margin-right: 60px;
+  width: 85%;
+  margin: auto;
+  padding-left: 20px;
+  font-size: $quote-font-size;
   font-style: normal;
+  line-height: 30px;
+  border-left: 3px solid $brand-color;
   
   cite {
     font-size: 16px;
-    font-style: normal;
+    font-style: italic;
+    // font-weight: bold;
     color: $gray;
     &:before {
       content: '\2014' '\00a0';
