--- a/_sass/4-layouts/_page.scss
+++ b/_sass/4-layouts/_page.scss
@@ -17,6 +17,9 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: #f5f5f5;
+  // width: 120%;
+  // max-width: 120%;
+  // margin-left: -10%;
   
   &:after {
     content: "";
