--- a/_sass/4-layouts/_post-page.scss
+++ b/_sass/4-layouts/_post-page.scss
@@ -51,6 +51,10 @@
   background-position: center;
   background-repeat: no-repeat;
   background-color: #f5f5f5;
+  // width: 120%;
+  // max-width: 120%;
+  // margin-left: -10%;
+
   &:after {
     content: "";
     display: table;
