--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -25,3 +25,11 @@ layout: default
 		</div>
 	</div>
 </div>
+
+<!-- <div class="container">
+	<div class="row">
+	  {% for post in page.posts %}
+		{% include article-content.html %}
+	  {% endfor %}
+	</div>
+  </div> -->
