--- a/_sass/4-layouts/_tag-page.scss
+++ b/_sass/4-layouts/_tag-page.scss
@@ -1,5 +1,6 @@
 /* Tag Page */
 .archive-title {
+  text-transform: capitalize;
   margin-bottom: 80px;
   padding-left: 15px;
   border-left: 7px solid $brand-color;
