Italic title etc

--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -6,7 +6,7 @@
 $text-alignment: justify;
 
 // Font
-$global-font: 'Tahoma';
+$global-font: Helvetica, Tahoma, Verdana;
 $quote-font-size: 18px;
 
 
