--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,8 @@ layout: default
 		<div class="col col-12">
 			
 			<div class="post__head wow fadeInUp">
-				<h1 class="post__title">{{ page.title | escape }}</h1>
+				<!-- <h1 class="post__title">{{ page.title | escape }}</h1> -->
+				<h1 class="post__title">{{ page.title }}</h1>
 				<div class="post-info">
 					{% if page.tags.size >= 1 %}
 					<span class="post-tags">
