update italics, tag pages

--- a/_sass/3-modules/_search.scss
+++ b/_sass/3-modules/_search.scss
@@ -69,6 +69,7 @@
   color: #bbb;
   overflow: auto;
   white-space: normal;
+  font-style: italic;
 
   .search-results__item {
     margin-bottom: 20px;
