--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -2,9 +2,11 @@
   <!-- begin article -->
   <div class="article wow fadeIn">
     <div class="article__content">
-      <h2 class="article__title">
-        <a href="{{ post.url | prepend: site.baseurl }}">{{post.title}}</a>
-      </h2>
+      {% if post.italic %}
+        <h2 class="article__title", style="font-style: italic;"><a href="{{ post.url | prepend: site.baseurl }}">{{post.title}}</a></h2>
+      {% else %}
+        <h2 class="article__title"><a href="{{ post.url | prepend: site.baseurl }}">{{post.title}}</a></h2>
+      {% endif %}
       <p class="article__excerpt">{% if post.description %}{{ post.description }}{% else %}{{ post.content | strip_html | truncate: 250 }}{% endif %}</p>
       <div class="article-info">
         {% if post.tags.size >= 1 %}
@@ -16,7 +18,7 @@
           </span>
         {% endif %}
         <span class="article__meta">
-          <span class="article__date"> on <a href="{{post.url | prepend: site.baseurl}}"><time datetime="{{ post.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%B %-d, %Y" %}{{ post.date | date: date_format }}</time></a></span>
+          <span class="article__date"> on <time datetime="{{ post.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%B %-d, %Y" %}{{ post.date | date: date_format }}</time></span>
           <!-- <span class="article__author"> by <a href="{{site.baseurl}}/about/">{{ site.author.name }}</a></span> -->
         </span>
       </div>
