--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,16 @@
 ---
 layout: default
 ---
+
 <div class="container">
 	<div class="row">
 		<div class="col col-12">
-			
 			<div class="post__head wow fadeInUp">
-				<!-- <h1 class="post__title">{{ page.title | escape }}</h1> -->
-				<h1 class="post__title">{{ page.title }}</h1>
+				{% if page.italic %}
+					<h1 class="post__title", style="font-style: italic;">{{ page.title }}</h1>
+				{% else %}
+					<h1 class="post__title">{{ page.title }}</h1>
+				{% endif %}
 				<div class="post-info">
 					{% if page.tags.size >= 1 %}
 					<span class="post-tags">
