--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -42,6 +42,7 @@ h6 {
   line-height: initial;
   letter-spacing: 1px;
   // text-transform: uppercase;
+  // text-transform: capitalize;
 }
 
 h1 {
