--- a/_sass/4-layouts/_tag-page.scss
+++ b/_sass/4-layouts/_tag-page.scss
@@ -9,3 +9,23 @@
     margin-bottom: 50px;
   }
 }
+
+
+/* Page Image */
+.tag-page-image {
+  display: block;
+  margin-bottom: 40px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #f5f5f5;
+  width: 120%;
+  max-width: 120%;
+  margin-left: -10%;
+  
+  &:after {
+    content: "";
+    display: table;
+    padding-top: 60%;
+  }
+}
