--- a/_includes/article-content.html
+++ b/_includes/article-content.html
@@ -18,7 +18,7 @@
           </span>
         {% endif %}
         <span class="article__meta">
-          <span class="article__date"> on <time datetime="{{ post.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%B %-d, %Y" %}{{ post.date | date: date_format }}</time></span>
+          <!-- <span class="article__date"> on <time datetime="{{ post.date | date_to_xmlschema }}">{% assign date_format = site.minima.date_format | default: "%B %-d, %Y" %}{{ post.date | date: date_format }}</time></span> -->
           <!-- <span class="article__author"> by <a href="{{site.baseurl}}/about/">{{ site.author.name }}</a></span> -->
         </span>
       </div>
